Update Dev channel to: 0.65.x

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "master",
+        "branch": "0.65.x",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
         }
